NEWS for Gnucap. Each snapshot corresponds to a tag in the git repository and
associated tarball. This file summarizes the important changes.

== 20241002-dev

- quantize time in tr_swp
- reschedule pruned events
- event owner
- longer double in lu decomp
- fix oversight in vsvs advance
- "module" alias for "subckt"
- avoid global _nstat use
- simplify configure invocation

== 20240702-dev

- fix trace header for use in C
- hierarchical system params
- noise_num: device interface
- matrix: eliminate edge vectors
- refactored port & parameter attribute
- avoid copy in set_param_by_name
- new build system

== 20240430-dev

- add noise to sim_data
- code of conduct
- fixes for spice_wrapper
- drop spice_wrapper (moved to models repo)

== 20240331-dev

- fix a bug in transient QA
- improve trln ac formulation
- hotfix commons clash
- explicit attribute list assignment op
- add CONTRIBUTE

== 20240220

- prepare build system files for use in extension packages
- support for directories in attach plugin
- Tokenize Verilog-AMS arrays
- local search for gnucap.rc, see manual
- Library improvements related to Verilog-AMS

== development snapshot 20231131

- instanciate logic devices using any language
- VAMS LRM compliant logic device ports

== development snapshot 20231031

- attribute instance

== development snapshot 20230930

- revisit resistor short condition handling
- fix uninitialised access in getlines
- fix a mem leak in ternary op
- add CS::reset_fail
- parse string in angle brackets

== development snapshot 20230729

- white space in quoted strings
- escaped chars in quoted strings
- more testing and interactive testing
- typed NOT_INPUT override
- version presented at fsic23

== development snapshot 20230623

This is a development snapshot addressing expression handling.

- ternary operator
- modulo binary operator
- quoted strings

== development snapshot 20230520

- param eval recursion bugfix
- allow '$' in identifiers
- add man pages from Debian
