@@ -1,1 +1,1 @@
-#define PATCHLEVEL "string-fix 2024.10.16"
+#define PATCHLEVEL "string-fix 2024.10.17"
